Added model endpoint

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,11 @@
-# MongoDB (change if your Mongo instance uses auth or different host/port)
+# MongoDB connection (default: local MongoDB)
 spring.data.mongodb.uri=mongodb://localhost:27017/car-data
+# Optional: override with env var SPRING_DATA_MONGODB_URI
 
-# Server port (optional)
-server.port=8080
+# Server port (default 8080) - uncomment to change
+# server.port=8080
+
+# Logging
+logging.level.org.springframework=INFO
+logging.level.lk.amila=DEBUG
 
